--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -48,8 +48,8 @@ Finally, a software framework is presented for driving a landscape evolution mod
 An optional section suggested by the UoM thesis preparation guide.
 
 \prefacesection{Acknowledgements}
-Acknowledgements...
-
-
+Writing this thesis has been an exercise in sustained suffering. The casual reader may, perhaps, exempt themselves from excessive guilt, but for those of you who have played the larger role in prolonging my agonies with your encouragement and support, well…you know who you are, and I hope you get what you deserve.
+\\ \\
+My suffering was funded by the Natural Environment Research Council doctoral training grant number NE/L501591/1.
 % The next line is NOT optional and MUST appear
 \afterpreface
